# Multi-Purpose-Software-Development-Project

./: .gitignore  CMakeLists.txt  Project1.sln  Project1.vcxproj  Project1.vcxproj.filters  README.md  kaynak.cpp  main.cpp  person.h  source.cpp  student.h  tree.h
include/: person.h  student.h  student_manager.h  tree.h
src/: main.cpp  person.cpp  source.cpp  student.cpp  student_manager.cpp
tests/: CMakeLists.txt  test_student.cpp
